threejs added via CDN script

--- a/public/3DJS/cube.html
+++ b/public/3DJS/cube.html
@@ -19,9 +19,16 @@
                 max-width:50%;
             }
 		</style>
-     <script type="module" src="cube.js" defer>
-
-     </script>
+     
+     <script type="importmap">
+        {
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three0.173.0/examples/jsm/"
+          }
+        }
+      </script>
+      <script type="module" src="cube.js" defer></script>
 	</head>
    
     
@@ -36,6 +43,5 @@
     <input type="range" id="z" min="-2" max="12" step="1" value="5">Z</input>
     <h3 id="zvalue"></h3>
     </div>
-    <div class="img"><img src="./logos.png"/></div>
     </div>
 </html>
